# poetry-renovate

./: .pre-commit-config.yaml
tests/fixtures/weird_indentation/: pyproject.toml
