[tool]
  [tool.poetry]
  name = "foobar"
  version = "0.0.1"
  description = "Foobar"
  authors = ["Foo Bar <foo.bar@example.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  python = "^3.9"
  foo = "^1.0.0"

  [tool.poetry.dev-dependencies]
  bar = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
